# animations

./: .gitignore  .gitmodules  README.md
sources/: CMakeLists.txt  glm.natvis
sources/engine/: 3dmath.h  application.cpp  application.h  input.cpp  input.h  log.cpp  log.h  main.cpp  time.cpp
sources/main/: ImGuizmo.cpp  ImGuizmo.h  camera.cpp  camera.h  game.cpp
sources/render/: animation.cpp  animation.h  debug_arrow.cpp  debug_arrow.h  direction_light.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
sources/shaders/: arrow_ps.glsl  arrow_vs.glsl  bones.glsl  character_ps.glsl  character_vs.glsl
